Image whitespace fix
Fixed images' bottom whitespace and set them to span full width of their container

--- a/sass/instagram-feed.scss
+++ b/sass/instagram-feed.scss
@@ -52,6 +52,11 @@ $grid-breakpoints: (
 // ========================================================================
 // INSTAGRAM FEED STYLES - To be added to assets/theme.scss.liquid
 // ========================================================================
+.instagram-feed__image img {
+  width: 100%;
+  display: block;
+}
+
 .instagram-feed__image--padded {
   margin-bottom: $grid-gutter-mobile;
   @include media-query($medium-up){
